tooltip fix, initial collapsing measurements

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -293,6 +293,9 @@ body
     font-size: 1em
   .project-text
     float: left
+    margin-bottom: 1em
+    .project-description
+      width: 30px * 12
   // Kefed Editor
   #kefedFrame
     width: 100%
@@ -304,6 +307,8 @@ body
       border: 1px solid silver
   #project-info
     float: left
+    .measurement-info
+      display: none
   .dataset-name
     +column(6)
     h2
